--- a/views/layout.html
+++ b/views/layout.html
@@ -1,57 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Arenomat</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
-
-<script src="js/jquery-1.11.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-
-        <script type="text/javascript" src="js/blockly_compressed.js"></script>
-        <script type="text/javascript" src="js/javascript_compressed.js"></script>
-        <script type="text/javascript" src="js/en_compressed.js"></script>
-        <script type="text/javascript" src="js/storage.js"></script>
-
-        <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-
-        <script type="text/javascript" src="js/storage.js"></script>
-
-        <script type="text/javascript" src="blocks/input.js"></script>
-        <script type="text/javascript" src="blocks/output.js"></script>
-        <script type="text/javascript" src="blocks/experiment.js"></script>
-
-    <script type="text/javascript" src="js/BlobBuilder.min.js"></script>
-    <script type="text/javascript" src="js/FileSaver.min.js"></script>
-    <script type="text/javascript" src="js/jquery.canvasAreaDraw.js"></script>
-
-<style>
-@import url(//fonts.googleapis.com/css?family=Leckerli+One);
-.navbar-brand {
-    font-family: 'Leckerli One';
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 700;
-    color: #428bca !important;
-    text-shadow: 1px 1px #fff !important;
-    &:hover {
-        color: #51CA42 !important;
-    }
-}
-.navbar-nav {
-    border-bottom: none !important;
-}
-
-
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-    background: white !important;
-    color: black !important;
-}
-
-canvas {
-    display: block;
-}
-</style>
+{{> head}}
 
 <body>
     {{> menu}}
