sockets woring, js moved outside

--- a/views/head.html
+++ b/views/head.html
@@ -24,6 +24,8 @@
     <script type="text/javascript" src="js/BlobBuilder.min.js"></script>
     <script type="text/javascript" src="js/FileSaver.min.js"></script>
     <script type="text/javascript" src="js/jquery.canvasAreaDraw.js"></script>
+        <script type="text/javascript" src="js/logic.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
 
 <style>
 @import url(//fonts.googleapis.com/css?family=Leckerli+One);
