optimalization of streaming, cleaning, refactoring a bit

--- a/views/foot.html
+++ b/views/foot.html
@@ -1,5 +1,5 @@
 <div class="footer navbar-default navbar-fixed-bottom">
-  <div class="container-fluid">
+  <div class="container">
        <a class="active" href="#">Michal Vondracek (info@michalvondracek.cz)</a>
   </div>
 </div>
