--- a/views/head.html
+++ b/views/head.html
@@ -5,26 +5,24 @@
     <title>Arenomat</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 
-<script src="js/jquery-1.11.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/lib/jquery-1.11.0.min.js"></script>
+<script src="js/lib/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="js/blockly_compressed.js"></script>
-        <script type="text/javascript" src="js/javascript_compressed.js"></script>
-        <script type="text/javascript" src="js/en_compressed.js"></script>
-        <script type="text/javascript" src="js/storage.js"></script>
+        <script type="text/javascript" src="js/lib/blockly_compressed.js"></script>
+        <script type="text/javascript" src="js/lib/javascript_compressed.js"></script>
+        <script type="text/javascript" src="js/lib/en_compressed.js"></script>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-        <script type="text/javascript" src="js/storage.js"></script>
+        <script type="text/javascript" src="js/blocks/input.js"></script>
+        <script type="text/javascript" src="js/blocks/output.js"></script>
+        <script type="text/javascript" src="js/blocks/experiment.js"></script>
 
-        <script type="text/javascript" src="blocks/input.js"></script>
-        <script type="text/javascript" src="blocks/output.js"></script>
-        <script type="text/javascript" src="blocks/experiment.js"></script>
+    <script type="text/javascript" src="js/lib/BlobBuilder.min.js"></script>
+    <script type="text/javascript" src="js/lib/FileSaver.min.js"></script>
 
-    <script type="text/javascript" src="js/BlobBuilder.min.js"></script>
-    <script type="text/javascript" src="js/FileSaver.min.js"></script>
     <script type="text/javascript" src="js/jquery.canvasAreaDraw.js"></script>
-        <script type="text/javascript" src="js/logic.js"></script>
+        <script type="text/javascript" src="js/blockly.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
 
 <style>
