--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-    <div class="container-fluid">
+    <div class="container">
 
                 <div class="tab-content">
                         <div id="tlogic" class="tab-pane fade in active">
@@ -19,7 +19,12 @@
 <div class="btn-group">
                                 <a id="codeSave" class="btn btn-warning" href="#">save</a>
                                 <a id="codeLoad" class="btn btn-primary" href="#">load</a>
-<input type="file" id="load" style="display: none;"/>
+</div>
+
+<div class="btn-group">
+                                <a id="codeExport" class="btn btn-warning" href="#">export</a>
+                                <a id="codeImport" class="btn btn-primary" href="#">import</a>
+<input type="file" id="import" style="display: none;"/>
                                 <a id="codeClear" class="btn btn-danger" href="#">clear</a>
 </div>
 </div>
@@ -30,13 +35,12 @@
                         <div id="tcamera" class="tab-pane fade">
                             <div class="row">
                             <span class="col-md-12">
-                                <div style="width: 800px; height: 600px">
-                                <img width="800" height="600" id="cam" class="area" style="position: absolute" />
-                                <canvas id="areas"  width="800" height="600" style="position: absolute; z-index: 999"></canvas>
-                                <canvas id="object" width="800" height="600" style="position: absolute; z-index: 900"></canvas>
-                                <canvas id="arena"  width="800" height="600" style="position: absolute"></canvas>
+                                <div style="width: {{ camWidth }}px; height: {{ camHeight }}px">
+                                <canvas id="areas"  width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 999"></canvas>
+                                <canvas id="object" width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 900"></canvas>
+                                <canvas id="arena"  width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 905"></canvas>
                                 </div>
- <div class="progress progress-striped active" style="width: 800px; height: 30px;">
+ <div class="progress progress-striped active" style="width: {{ camWidth }}px; height: 30px;">
     <div class="progress-bar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
 </div>
 frames: <span id="cam_counter">0</span>, recognized: <span id="cv_counter">0</span>, fps: <span id="fps">0</span>
@@ -61,13 +65,13 @@ frames: <span id="cam_counter">0</span>, recognized: <span id="cv_counter">0</sp
   <div class="form-group">
     <label for="width" class="col-sm-2 control-label">Width</label>
     <div class="col-sm-10">
-      <input type="number" class="form-control" id="width" placeholder="800">
+      <input type="number" class="form-control" id="width" placeholder="{{ camWidth }}">
     </div>
   </div>
   <div class="form-group">
     <label for="height" class="col-sm-2 control-label">Height</label>
     <div class="col-sm-10">
-      <input type="number" class="form-control" id="height" placeholder="600">
+      <input type="number" class="form-control" id="height" placeholder="{{ camHeight }}">
     </div>
   </div>
 
