added webcam canvas

--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,8 @@
                             <span class="col-md-12">
                                 <div style="width: {{ camWidth }}px; height: {{ camHeight }}px">
                                 <canvas id="areas"  width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 999"></canvas>
-                                <canvas id="object" width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 900"></canvas>
+                                <canvas id="webcam"  width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 900"></canvas>
+                                <canvas id="object" width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 901"></canvas>
                                 <canvas id="arena"  width="{{ camWidth }}" height="{{ camHeight }}" style="position: absolute; z-index: 905"></canvas>
                                 </div>
  <div class="progress progress-striped active" style="width: {{ camWidth }}px; height: 30px;">
