--- a/views/head.html
+++ b/views/head.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Arenomat</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>Arenomat</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/main.css">
 
-<script src="js/lib/jquery-1.11.0.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
+		<script src="js/lib/jquery-1.11.0.min.js"></script>
+		<script src="js/lib/bootstrap.min.js"></script>
 
         <script type="text/javascript" src="js/lib/blockly_compressed.js"></script>
         <script type="text/javascript" src="js/lib/javascript_compressed.js"></script>
@@ -18,38 +19,10 @@
         <script type="text/javascript" src="js/blocks/output.js"></script>
         <script type="text/javascript" src="js/blocks/experiment.js"></script>
 
-    <script type="text/javascript" src="js/lib/BlobBuilder.min.js"></script>
-    <script type="text/javascript" src="js/lib/FileSaver.min.js"></script>
+		<script type="text/javascript" src="js/lib/BlobBuilder.min.js"></script>
+		<script type="text/javascript" src="js/lib/FileSaver.min.js"></script>
 
-    <script type="text/javascript" src="js/jquery.canvasAreaDraw.js"></script>
+		<script type="text/javascript" src="js/jquery.canvasAreaDraw.js"></script>
         <script type="text/javascript" src="js/blockly.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
-
-<style>
-@import url(//fonts.googleapis.com/css?family=Leckerli+One);
-.navbar-brand {
-    font-family: 'Leckerli One';
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 700;
-    color: #428bca !important;
-    text-shadow: 1px 1px #fff !important;
-    &:hover {
-        color: #51CA42 !important;
-    }
-}
-.navbar-nav {
-    border-bottom: none !important;
-}
-
-
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-    background: white !important;
-    color: black !important;
-}
-
-canvas {
-    display: block;
-}
-</style>
-</head>
+	</head>
