replay, saving webcam images to MongoDB, may be dangerous!!

--- a/views/head.html
+++ b/views/head.html
@@ -3,26 +3,28 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Arenomat</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/css/bootstrap-slider.min.css">
+		<link rel="stylesheet" href="/css/main.css">
 
-		<script src="js/lib/jquery-1.11.0.min.js"></script>
-		<script src="js/lib/bootstrap.min.js"></script>
+		<script src="/js/lib/jquery-1.11.0.min.js"></script>
+		<script src="/js/lib/bootstrap.min.js"></script>
+		<script src="/js/lib/bootstrap-slider.min.js"></script>
 
-        <script type="text/javascript" src="js/lib/blockly_compressed.js"></script>
-        <script type="text/javascript" src="js/lib/javascript_compressed.js"></script>
-        <script type="text/javascript" src="js/lib/en_compressed.js"></script>
+        <script type="text/javascript" src="/js/lib/blockly_compressed.js"></script>
+        <script type="text/javascript" src="/js/lib/javascript_compressed.js"></script>
+        <script type="text/javascript" src="/js/lib/en_compressed.js"></script>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-        <script type="text/javascript" src="js/blocks/input.js"></script>
-        <script type="text/javascript" src="js/blocks/output.js"></script>
-        <script type="text/javascript" src="js/blocks/experiment.js"></script>
+        <script type="text/javascript" src="/js/blocks/input.js"></script>
+        <script type="text/javascript" src="/js/blocks/output.js"></script>
+        <script type="text/javascript" src="/js/blocks/experiment.js"></script>
 
-		<script type="text/javascript" src="js/lib/BlobBuilder.min.js"></script>
-		<script type="text/javascript" src="js/lib/FileSaver.min.js"></script>
+		<script type="text/javascript" src="/js/lib/BlobBuilder.min.js"></script>
+		<script type="text/javascript" src="/js/lib/FileSaver.min.js"></script>
 
-		<script type="text/javascript" src="js/jquery.canvasAreaDraw.js"></script>
-        <script type="text/javascript" src="js/blockly.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="/js/jquery.canvasAreaDraw.js"></script>
+        <script type="text/javascript" src="/js/blockly.js"></script>
+        <script type="text/javascript" src="/js/main.js"></script>
 	</head>
