arena list, moving of the polygon points not working!

--- a/views/head.html
+++ b/views/head.html
@@ -24,7 +24,7 @@
 		<script type="text/javascript" src="/js/lib/BlobBuilder.min.js"></script>
 		<script type="text/javascript" src="/js/lib/FileSaver.min.js"></script>
 
-		<script type="text/javascript" src="/js/vision.js"></script>
+		<script type="text/javascript" src="/js/arena.js"></script>
         <script type="text/javascript" src="/js/blockly.js"></script>
         <script type="text/javascript" src="/js/main.js"></script>
 	</head>
