refactor to data frame entity

--- a/views/head.html
+++ b/views/head.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="/js/blocks/input.js"></script>
         <script type="text/javascript" src="/js/blocks/output.js"></script>
         <script type="text/javascript" src="/js/blocks/experiment.js"></script>
+        <script type="text/javascript" src="/js/blocks/javascript.js"></script>
 
 		<script type="text/javascript" src="/js/lib/BlobBuilder.min.js"></script>
 		<script type="text/javascript" src="/js/lib/FileSaver.min.js"></script>
