--- a/views/blockly.html
+++ b/views/blockly.html
@@ -262,4 +262,29 @@
 			</block>
 		</category>
 	</category>
+    <category name="Timers">
+      <block type="javascript_setinterval">
+        <value name="interval">
+          <block type="math_number">
+            <title name="NUM">1000</title>
+          </block>
+        </value>
+      </block>
+      <block type="javascript_settimeout">
+        <value name="timeout">
+          <block type="math_number">
+            <title name="NUM">1000</title>
+          </block>
+        </value>
+      </block>
+    </category>
+    <category name="Console">
+      <block type="javascript_consolelog">
+        <value name="log">
+          <block type="text">
+            <title name="TEXT">Hello World</title>
+          </block>
+        </value>
+      </block>
+    </category>
 </xml>
