--- a/views/layout.html
+++ b/views/layout.html
@@ -1,10 +1,18 @@
-{{> head}}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Arenomat</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<body>
-    {{> menu}}
+		{{> assets}}
+	</head>		
 
-    {{{ yield }}}
 
-    {{> foot }}
-</body>
+	<body>
+		{{> menu}}
+
+		{{{ yield }}}
+
+		{{> foot }}
+	</body>
 </html>
