--- a/views/menu.html
+++ b/views/menu.html
@@ -13,6 +13,7 @@
 			<ul class="nav navbar-nav nav-tabs">
 				<li class="active"><a data-toggle="tab" href="#tlogic">Logic</a></li>
 				<li><a data-toggle="tab" href="#tcamera">Camera</a></li>
+				<li><a data-toggle="tab" href="#tanalyze">Analyze</a></li>
 				<li><a data-toggle="tab" href="#tsettings">Settings</a></li>
 				<li>
 			</ul>
