--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,11 @@
+<!-- Modal -->
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        </div> <!-- /.modal-content -->
+    </div> <!-- /.modal-dialog -->
+</div> <!-- /.modal -->
+
 <div class="container">
 	<div class="tab-content">
 		<div id="tlogic" class="tab-pane fade in active">
@@ -16,7 +24,7 @@
 
 						<div class="btn-group">
 							<a id="codeSave" class="btn btn-warning" href="#">save</a>
-							<a id="codeLoad" class="btn btn-primary" href="#">load</a>
+							<button id="codeLoad" class="btn btn-primary" href="http://192.168.0.106/experiments" data-toggle="modal" data-target="#modal">load</button>
 						</div>
 
 						<div class="btn-group">
