--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
 
 						<div class="btn-group">
 							<a id="codeSave" class="btn btn-warning" href="#">save</a>
-							<button id="codeLoad" class="btn btn-primary" href="http://192.168.0.106/experiments" data-toggle="modal" data-target="#modal">load</button>
+							<button id="codeLoad" class="btn btn-primary" href="/experiments" data-toggle="modal" data-target="#modal">load</button>
 						</div>
 
 						<div class="btn-group">
