added font awesome & boostrap glyphs delays in blocks - setTimeouts

--- a/views/assets.html
+++ b/views/assets.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/bootstrap-slider.min.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/main.css">
 
 <script src="/js/lib/jquery-1.11.0.min.js"></script>
