--- a/views/menu.html
+++ b/views/menu.html
@@ -19,8 +19,10 @@
 			</ul>
 
             <ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="#"  id="shocking">.......</a></li>
-				<li class="active"><a href="#" id="elapsedTime">.</a></li>
+				<li class="active"><a href="#"  id="isWebcam"><i class="fa fa-video-camera fa-lg"></i></a></li>
+				<li class="active"><a href="#"  id="isArduino"><i class="fa fa-code-fork fa-lg"></i></a></li>
+				<li class="active"><a href="#"  id="isShocking"><i class="fa fa-bolt fa-lg"></i><span>0.0mA</span></a></li>
+				<li class="active"><a href="#" id="elapsedTime">0s</a></li>
             </ul>
 		</div>
 	</div>
