input output blocks, custom ouput

--- a/views/blockly.html
+++ b/views/blockly.html
@@ -44,9 +44,11 @@
 		<block type="experiment"></block>
 		<block type="subject"></block>
 		<block type="robot"></block>
+		<block type="center"></block>
 	</category>
 	<category name="Input">
 		<block type="motor_position"></block>
+		<block type="position"></block>
 		<block type="zone"></block>
 		<block type="time"></block>
 	</category>
@@ -130,6 +132,7 @@
     </category>
 	<category name="Messages">
 		<block type="message"></block>
+		<block type="out"></block>
     </category>
 	<category name="Variables" custom="VARIABLE"></category>
 	<category name="Functions" custom="PROCEDURE"></category>
