--- a/views/menu.html
+++ b/views/menu.html
@@ -17,12 +17,17 @@
 				<li><a data-toggle="tab" href="#tsettings">Settings</a></li>
 				<li>
 			</ul>
+			<ul class="nav navbar-nav">
+				<li class="active"><div style="padding: 10px"><a class="codeStart btn btn-success" title="Start the experiment" href="#"><i class="fa fa-play fa-lg"></i></a></div></li>
+				<li class="active"><div style="padding: 10px"><a class="codeStop btn btn-danger" title="Stop the experiment" href="#"><i class="fa fa-stop fa-lg"></i></a></div></li>
+			</ul>
+
 
             <ul class="nav navbar-nav navbar-right">
 				<li class="active"><a href="#"  id="isWebcam"><i class="fa fa-video-camera fa-lg"></i></a></li>
 				<li class="active"><a href="#"  id="isArduino"><i class="fa fa-code-fork fa-lg"></i></a></li>
 				<li class="active"><a href="#"  id="isShocking"><i class="fa fa-bolt fa-lg"></i><span>0.0mA</span></a></li>
-				<li class="active"><a href="#" id="elapsedTime">0s</a></li>
+				<li class="active"><a href="#" class="codeStop" id="elapsedTime">0s</a></li>
             </ul>
 		</div>
 	</div>
