--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,3 +41,11 @@
     float: left;
     position: absolute;
 }
+
+.slider {
+    width: 100% !important;
+    height: 20px !important;
+}
+.slider-track {
+    height: 20px !important;
+}
