--- a/views/index.html
+++ b/views/index.html
@@ -78,9 +78,95 @@ object 6 <span id="object_6">0,1</span><br />
 <br />
 <br />
 <br />
+			
+			
+			
+			
+		</div>
+		<div id="tsettings" class="tab-pane fade">
+			<br />
+			<form class="form-horizontal" role="form">
+				<div class="form-group">
+					<label for="dev" class="col-sm-2 control-label">Video device</label>
+					<div class="col-sm-10">
+						<input type="number" class="form-control" id="dev" placeholder="0">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="width" class="col-sm-2 control-label">Width</label>
+					<div class="col-sm-10">
+						<input type="number" class="form-control" id="width" placeholder="{{ camWidth }}">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="height" class="col-sm-2 control-label">Height</label>
+					<div class="col-sm-10">
+						<input type="number" class="form-control" id="height" placeholder="{{ camHeight }}">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="height" class="col-sm-2 control-label">Brightness</label>
+					<div class="col-sm-10">
+					    <input id="brightness" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="height" class="col-sm-2 control-label">Exposure</label>
+					<div class="col-sm-10">
+					    <input id="exposure" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="height" class="col-sm-2 control-label">Gain</label>
+					<div class="col-sm-10">
+					    <input id="gain" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="height" class="col-sm-2 control-label">Contrast</label>
+					<div class="col-sm-10">
+					    <input id="contrast" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="height" class="col-sm-2 control-label">Focus</label>
+					<div class="col-sm-10">
+					    <input id="focus" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
+					</div>
+				</div>
+
+
+
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-default">Save</button>
+					</div>
+				</div>
+			</form>
+
+		</div>
+	</div>
+
+
+</div>
+
 <script>
+$( document ).ready(function() {
 var timer;
 var oldValue;
+
+var brightnesstimer;
+var brightnessoldValue;
+
+function delayBrightness(value) {
+    clearTimeout(brightnesstimer);
+    brightnesstimer = setTimeout(function () {
+	$.get('/settings/brightness/' + value, function( data ) {
+	});
+    }, 200);
+}
 
 function delayShow(value) {
     clearTimeout(timer);
@@ -113,54 +199,24 @@ $("#ex6").on('slide', function(slideEvt) {
     }
 });
 
+
+$("#contrast, #gain, #exposure, #focus").slider({
+    tooltip: 'always'
+});
+
+$("#brightness").slider({
+    tooltip: 'always'
+}).on('slide', function(slideEvt) {
+    if (brightnessoldValue !== slideEvt.value) {
+	brightnessoldValue = slideEvt.value;
+        delayBrightness(slideEvt.value);
+    }
+});
+
     delayShow(1);
 
-
+});
 </script>
-			
-			
-			
-			
-		</div>
-		<div id="tsettings" class="tab-pane fade">
-			<br />
-			<form class="form-horizontal" role="form">
-				<div class="form-group">
-					<label for="dev" class="col-sm-2 control-label">Video device</label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" id="dev" placeholder="0">
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="width" class="col-sm-2 control-label">Width</label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" id="width" placeholder="{{ camWidth }}">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Height</label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" id="height" placeholder="{{ camHeight }}">
-					</div>
-				</div>
-
-
-
-
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default">Save</button>
-					</div>
-				</div>
-			</form>
-
-		</div>
-	</div>
-
-
-</div>
-
 
 
 {{> blockly}}
