delete, save, load project

--- a/views/assets.html
+++ b/views/assets.html
@@ -6,6 +6,7 @@
 <script src="/js/lib/jquery-1.11.0.min.js"></script>
 <script src="/js/lib/bootstrap.min.js"></script>
 <script src="/js/lib/bootstrap-slider.min.js"></script>
+<script src="/js/lib/bootbox.min.js"></script>
 
 <script type="text/javascript" src="/js/lib/blockly_compressed.js"></script>
 <script type="text/javascript" src="/js/lib/javascript_compressed.js"></script>
