fixed menu links

--- a/views/menu.html
+++ b/views/menu.html
@@ -19,12 +19,12 @@
                     <li><a href="#save" id="codeSave">Save</a></li>
                     <li class="divider"></li>
                     <li>
-			<a href="#import" id="codeImport">Import</a>
+			<a href="#" id="codeImport">Import</a>
                         <input type="file" id="import" style="display: none;"/>
 		    </li>
-                    <li><a href="#export" id="codeExport">Export</a></li>
+                    <li><a href="#" id="codeExport">Export</a></li>
                     <li class="divider"></li>
-                    <li><a href="#clear" id="codeClear">Clear</a></li>
+                    <li><a href="" id="codeClear">Clear</a></li>
                 </ul>
             </li>
 
