added distance block changed: frame.cv[-1] is the center of canvas changed: layers next to webcam

--- a/views/blockly.html
+++ b/views/blockly.html
@@ -45,6 +45,7 @@
 		<block type="subject"></block>
 		<block type="robot"></block>
 		<block type="center"></block>
+		<block type="distance"></block>
 	</category>
 	<category name="Input">
 		<block type="motor_position"></block>
