--- a/views/index.html
+++ b/views/index.html
@@ -22,15 +22,31 @@
 					<div id="vision" style="width: {{ camHeight }}px; height: {{ camHeight }}px">
 						<canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: {{ camHeight }}px; height: {{ camHeight }}px"></canvas>
 					</div>
-					<a href="0" class="active change">0</a>
-					<a href="1" class="change">1</a>
-					<a href="2" class="change">2</a>
-					<a href="3" class="change">3</a>
-					<a href="4" class="change">4</a>
-					<a href="5" class="change">5</a>
-					frames: <span id="cam_counter">0</span>, recognized: <span id="cv_counter">0</span>, fps: <span id="fps">0</span>
 				</div>
 <div class="col-md-3">
+<div class="table-responsive">
+<table class="table table-striped table-hover table-condensed">
+<tr>
+    <th>name</th>
+    <th>attrs</th>
+</tr>
+<tr>
+    <td><a href="0" class="active change">0</a></td><td></td>
+</tr>
+<tr>
+    <td><a href="1" class="change">1</a></td><td></td>
+</tr>
+<tr>
+    <td><a href="2" class="change">2</a></td><td></td>
+</tr>
+<tr>
+    <td><a href="3" class="change">3</a></td><td></td>
+</tr>
+</table>
+</div>
+
+frames: <span id="cam_counter">0</span>, recognized: <span id="cv_counter">0</span>, fps: <span id="fps">0</span>
+
 <div class="table-responsive">
 <table id="custom_variables" class="table table-striped table-hover">
 <tr>
