added webcam preview to settings tab fixed: now sending the right image, cropped & resized

--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,9 @@ object 6 <span id="object_6">0,1</span><br />
 			
 		</div>
 		<div id="tsettings" class="tab-pane fade">
-			<br />
+<div class="row">
+				<div class="col-md-9">
+
 			<form class="form-horizontal" role="form">
 				<div class="form-group">
 					<label for="dev" class="col-sm-2 control-label">Video device</label>
@@ -142,7 +144,12 @@ object 6 <span id="object_6">0,1</span><br />
 					</div>
 				</div>
 			</form>
-
+			</div>
+			<div class="col-md-3">
+        			<canvas id="miniwebcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 250px; height: 250px"></canvas>
+			</div>
+</div>
+		    </div>
 		</div>
 	</div>
 
