zone rotation block

--- a/views/blockly.html
+++ b/views/blockly.html
@@ -46,6 +46,7 @@
 		<block type="robot"></block>
 		<block type="center"></block>
 		<block type="distance"></block>
+		<block type="rotatezone"></block>
 	</category>
 	<category name="Input">
 		<block type="motor_position"></block>
