--- a/views/blockly.html
+++ b/views/blockly.html
@@ -42,16 +42,18 @@
 	</category>
 	<category name="Experiment">
 		<block type="experiment"></block>
+	</category>
+	<category name="Arena">
 		<block type="subject"></block>
 		<block type="robot"></block>
 		<block type="center"></block>
 		<block type="distance"></block>
 		<block type="rotatezone"></block>
+		<block type="zone"></block>
 	</category>
 	<category name="Input">
 		<block type="motor_position"></block>
 		<block type="position"></block>
-		<block type="zone"></block>
 		<block type="time"></block>
 	</category>
 	<category name="Output">
@@ -60,6 +62,7 @@
 		<block type="turntable"></block>
 		<block type="feeder"></block>
 		<block type="sound"></block>
+		<block type="out"></block>
 	</category>
 	<category name="Logic">
 		<block type="logic_compare"></block>
@@ -134,7 +137,6 @@
     </category>
 	<category name="Messages">
 		<block type="message"></block>
-		<block type="out"></block>
     </category>
 	<category name="Variables" custom="VARIABLE"></category>
 	<category name="Functions" custom="PROCEDURE"></category>
