--- a/views/index.html
+++ b/views/index.html
@@ -24,25 +24,14 @@
 					</div>
 				</div>
 <div class="col-md-3">
+<h2>Zones</h2>
 <div class="table-responsive">
-<table class="table table-striped table-hover table-condensed">
+<table id="zonelist" class="table table-striped table-hover table-condensed">
 <tr>
-    <th>name</th>
-    <th>attrs</th>
-</tr>
-<tr>
-    <td><a href="0" class="active change">0</a></td><td></td>
-</tr>
-<tr>
-    <td><a href="1" class="change">1</a></td><td></td>
-</tr>
-<tr>
-    <td><a href="2" class="change">2</a></td><td></td>
-</tr>
-<tr>
-    <td><a href="3" class="change">3</a></td><td></td>
+    <td><a href="0" class="activeZone change">0</a></td><td></td>
 </tr>
 </table>
+<button id="addZone"class="btn btn-primary btn-sm">+</button>
 </div>
 
 frames: <span id="cam_counter">0</span>, recognized: <span id="cv_counter">0</span>, fps: <span id="fps">0</span>
