--- a/views/index.html
+++ b/views/index.html
@@ -19,31 +19,76 @@
 		<div id="tcamera" class="tab-pane fade">
 			<div class="row">
 				<div class="col-md-9">
-					<div id="vision" style="width: {{ camHeight }}px; height: {{ camHeight }}px">
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Arena</h3>
+  </div>
+  <div class="panel-body">
+					<div id="vision" style="margin: 0 auto; width: {{ camHeight }}px; height: {{ camHeight }}px">
 						<canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: {{ camHeight }}px; height: {{ camHeight }}px"></canvas>
 					</div>
+
+  </div>
+</div>
+
+
 				</div>
 <div class="col-md-3">
-<h2>Zones</h2>
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Zones</h3>
+  </div>
+  <div class="panel-body">
+
 <div class="table-responsive">
 <table id="zonelist" class="table table-striped table-hover table-condensed">
 <tr>
     <td><a href="0" class="activeZone change">0</a></td><td></td>
 </tr>
 </table>
-<button id="addZone"class="btn btn-primary btn-sm">+</button>
+<button id="addZone"class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></button>
 </div>
 
-frames: <span id="cam_counter">0</span>, recognized: <span id="cv_counter">0</span>, fps: <span id="fps">0</span>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Frames</h3>
+  </div>
+  <div class="panel-body">
 
 <div class="table-responsive">
-<table id="custom_variables" class="table table-striped table-hover">
-<tr>
-    <th>name</th>
-    <th>value</th>
-</tr>
+<table class="table table-striped table-hover table-condensed">
+<tr><th>frames:</th><td align=right> <span id="cam_counter">0</span></td></tr>
+<tr><th>recognized:</th><td align=right> <span id="cv_counter">0</span></td></tr>
+<tr><th>fps:</th><td align=right> <span id="fps">0</span></td></tr>
 </table>
 </div>
+
+  </div>
+</div>
+
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Custom variables</h3>
+  </div>
+  <div class="panel-body">
+
+   <div class="table-responsive">
+    <table id="custom_variables" class="table table-striped table-hover">
+     <tr>
+      <th>name</th>
+      <th>value</th>
+     </tr>
+    </table>
+   </div>
 </div>
 			</div>
 		</div>
