--- a/views/menu.html
+++ b/views/menu.html
@@ -29,7 +29,7 @@
             </li>
 
 
-				<li class="active"><a data-toggle="tab" href="#tlogic">Logic</a></li>
+				<li class="active"><a id="blogic" data-toggle="tab" href="#tlogic">Logic</a></li>
 				<li><a data-toggle="tab" href="#tcamera">Camera</a></li>
 <!--				<li><a data-toggle="tab" href="#tanalyze">Analyze</a></li> -->
 <!--				<li><a data-toggle="tab" href="#tsettings">Settings</a></li> -->
