HTML - missing closing div tag

--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,8 @@
     <td><a href="0" class="activeZone change">0</a></td><td></td>
 </tr>
 </table>
-<button id="addZone" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></button>
+
+<button id="addZone" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> add zone</button>
 </div>
 
   </div>
@@ -92,7 +93,7 @@
 </div>
 			</div>
 		</div>
-
+</div>
 		<div id="tanalyze" class="tab-pane fade">
 
 <img id="image" />
