--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
 <div class="table-responsive">
 <table id="zonelist" class="table table-striped table-hover table-condensed">
 <tr>
-    <td><a href="0" class="activeZone change">0</a></td><td></td>
+    <td><a href="0" class="activeZone change">Zone 0</a></td><td></td>
 </tr>
 </table>
 
