arduino plugins tabs into partials

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,10 @@
 @import url(//fonts.googleapis.com/css?family=Leckerli+One);
+
+
+html, body {
+  height: 100%;
+}
+
 .navbar-brand {
 	font-family: 'Leckerli One';
 	font-size: 35px;
