--- a/views/index.html
+++ b/views/index.html
@@ -8,187 +8,11 @@
 
 <div class="container">
 	<div class="tab-content">
-		<div id="tlogic" class="tab-pane fade in active">
-			<div class="row">
-				<div class="col-md-12">
-					<div id="blockly" style="height: 1000px; width: 100%"></div>
-				</div>
-			</div>
-		</div>
-
-		<div id="tcamera" class="tab-pane fade">
-			<div class="row">
-				<div class="col-md-9">
-
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Arena</h3>
-  </div>
-  <div class="panel-body">
-					<div id="vision" style="margin: 0 auto; width: {{ camHeight }}px; height: {{ camHeight }}px">
-						<canvas id="webcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: {{ camHeight }}px; height: {{ camHeight }}px"></canvas>
-					</div>
-
-  </div>
-</div>
-
-
-				</div>
-<div class="col-md-3">
-
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Zones</h3>
-  </div>
-  <div class="panel-body">
-
-<div class="table-responsive">
-<table id="zonelist" class="table table-striped table-hover table-condensed">
-<tr>
-    <td><a href="0" class="activeZone change">Zone 0</a></td><td></td>
-</tr>
-</table>
-
-<button id="addZone" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> add zone</button>
-</div>
-
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Frames</h3>
-  </div>
-  <div class="panel-body">
-
-<div class="table-responsive">
-<table class="table table-striped table-hover table-condensed">
-<tr><th>frames:</th><td align=right> <span id="cam_counter">0</span></td></tr>
-<tr><th>recognized:</th><td align=right> <span id="cv_counter">0</span></td></tr>
-<tr><th>fps:</th><td align=right> <span id="fps">0</span></td></tr>
-</table>
-</div>
-
-  </div>
-</div>
-
-
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Custom variables</h3>
-  </div>
-  <div class="panel-body">
-
-   <div class="table-responsive">
-    <table id="custom_variables" class="table table-striped table-hover">
-     <tr>
-      <th>name</th>
-      <th>value</th>
-     </tr>
-    </table>
-   </div>
-</div>
-			</div>
-		</div>
-</div>
-		<div id="tanalyze" class="tab-pane fade">
-
-<img id="image" />
-<br />
-<input id="ex6" type="text" style="width: 640px" data-slider-min="1" data-slider-max="{{ frameCount }}" data-slider-step="1" data-slider-value="1" />
-<br />
-object 1 <span id="object_1">0,1</span><br />
-object 2 <span id="object_2">0,1</span><br />
-object 3 <span id="object_3">0,1</span><br />
-object 4 <span id="object_4">0,1</span><br />
-object 5 <span id="object_5">0,1</span><br />
-object 6 <span id="object_6">0,1</span><br />
-<div id="output"></div>
-<br />
-<br />
-<br />
-			
-			
-			
-			
-		</div>
-		<div id="tsettings" class="tab-pane fade">
-<div class="row">
-				<div class="col-md-9">
-
-			<form class="form-horizontal" role="form">
-				<div class="form-group">
-					<label for="dev" class="col-sm-2 control-label">Video device</label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" id="dev" placeholder="0">
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="width" class="col-sm-2 control-label">Width</label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" id="width" placeholder="{{ camWidth }}">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Height</label>
-					<div class="col-sm-10">
-						<input type="number" class="form-control" id="height" placeholder="{{ camHeight }}">
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Brightness</label>
-					<div class="col-sm-10">
-					    <input id="brightness" data-webcam="Brightness" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Exposure</label>
-					<div class="col-sm-10">
-					    <input id="exposure" data-webcam="Exposure auto" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Gain</label>
-					<div class="col-sm-10">
-					    <input id="gain" data-webcam="Gain" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Contrast</label>
-					<div class="col-sm-10">
-					    <input id="contrast" data-webcam="Contrast" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="height" class="col-sm-2 control-label">Focus</label>
-					<div class="col-sm-10">
-					    <input id="focus" data-webcam="Focus, absolute" class="webcam-control form-control" type="text" data-slider-min="1" data-slider-max="254" data-slider-step="1" data-slider-value="1" />
-					</div>
-				</div>
-
-
-
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default">Save</button>
-					</div>
-				</div>
-			</form>
-			</div>
-			<div class="col-md-3">
-        			<canvas id="miniwebcam" width="{{ halfCamHeight }}" height="{{ halfCamHeight }}" style="width: 250px; height: 250px"></canvas>
-			</div>
-</div>
-		    </div>
-		</div>
+            {{> tabLogic }}
+            {{> tabCamera }}
+            {{> tabAnalyze }}
+            {{> tabSettings }}
 	</div>
-
-
 </div>
 
 <script>
